Add support of glTF models for RT

--- a/Src/ModelViewer/ModelViewer_VS16.vcxproj
+++ b/Src/ModelViewer/ModelViewer_VS16.vcxproj
@@ -410,6 +410,7 @@
     <ClInclude Include="ModelViewer.h" />
     <ClInclude Include="Shaders\ModelViewerRayTracing.h" />
     <ClInclude Include="Shaders\RayTracingHlslCompat.h" />
+    <ClInclude Include="Shaders\Unpacking.hlsli" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\MiniEngine\Core\Core.vcxproj">
