--- a/RTModelViewer/RTModelViewer.vcxproj
+++ b/RTModelViewer/RTModelViewer.vcxproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <None Include="..\readme.md" />
     <None Include="packages.config" />
+    <None Include="Shaders\LightingRT.hlsli" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\DiffuseHitShaderLib.hlsl" />
