--- a/RTModelViewer/RTModelViewer.vcxproj.filters
+++ b/RTModelViewer/RTModelViewer.vcxproj.filters
@@ -34,6 +34,9 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="..\readme.md" />
+    <None Include="Shaders\LightingRT.hlsli">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\RayGenerationShadowsLib.hlsl">
